enable view